# fiducia-node-sidecar.rs

./: .cli-flags.toml  .gitignore  Cargo.toml  Dockerfile  README.md
.github/: README.md
.github/workflows/: README.md  ci.yml  deploy-test.yml  docker.yml
scripts/: README.md  with-flags2env.sh
src/: README.md  auth.rs  collector.rs  exporter.rs  heartbeat.rs  main.rs  meta.rs  metrics.rs
