[package]
name = "fiducia-node-sidecar"
version = "0.1.0"
edition = "2021"
description = "Per-node sidecar for fiducia.cloud — bridges a fiducia-node to the control plane (heartbeat/metadata) and observability stack (logs/metrics)."

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# NOTE: talking to the local node and the brain needs an HTTP client (reqwest /
# raw hyper). Left out of the skeleton; those calls are stubbed.
